--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "redux": "^4.0.4",
+    "react-redux": "^7.1.0",
+    "redux-promise-middleware": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
