--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "express": "^4.17.1",
     "express-boom": "^3.0.0",
     "webpack-node-externals": "^1.7.2",
-    "mongoose": "^5.6.8"
+    "mongoose": "^5.6.8",
+    "jwt-simple": "^0.5.6",
+    "sha256": "^0.2.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
