--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.8.6",
     "redux": "^4.0.4",
     "react-redux": "^7.1.0",
-    "redux-promise-middleware": "^6.1.1"
+    "redux-promise-middleware": "^6.1.1",
+    "redux-form": "^8.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
