--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "redux": "^4.0.4",
     "react-redux": "^7.1.0",
     "redux-promise-middleware": "^6.1.1",
-    "redux-form": "^8.2.5"
+    "redux-form": "^8.2.5",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
