--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-boom": "^3.0.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "mongoose": "^5.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
